fixed circle, overlapping to title in about-us

--- a/wp-content/themes/wecreate/resources/assets/src/sass/layouts/_about.scss
+++ b/wp-content/themes/wecreate/resources/assets/src/sass/layouts/_about.scss
@@ -34,6 +34,9 @@
             margin-bottom: 169px;                   
         }               
     }
+    .h1 {
+        z-index: 10;
+    }
     .about {
         position: relative;
         padding-bottom: 427px;
@@ -170,6 +173,7 @@
             }      
             .about-circle-wrapper{
                 right: 0;
+                z-index: -5;
             }               
                      
         }                
